k8s/ehealth/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ehealth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: nexus-pull-secret
      containers:
        - name: backend
          image: nexus-service.cicd.svc.cluster.local:8082/ehealth-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
