k8s/ehealth/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ehealth-frontend-ingress
  namespace: ehealth
spec:
  ingressClassName: nginx
  rules:
    - host: ehealth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
